--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<main id="panda"></main>
+	<section id="panda"></section>
 	<script src="./build/js/bundle.js"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-51694552-3', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
