Fixed SEO issues

--- a/index.html
+++ b/index.html
@@ -3,6 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panda Syntax Dark Theme | Siamak Mokhtari</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<meta name="description" content="A Superminimal, dark Syntax Theme for atom." />
+	<meta name="keywords" content="panda,atom,syntax,dark,theme,siamakmokhtari" />
+	<meta name="author" content="Siamak Mokhtari (http://siamak.us)" />
+	<meta name="robots" content="index, follow" />
+
+	<!-- Twitter Card -->
+	<meta property="twitter:card" content="summary">
+	<meta property="twitter:title" content="Panda Syntax Dark Theme | Siamak Mokhtari">
+	<meta property="twitter:description" content="Panda Syntax Dark Theme. a superminimal, dark Syntax Theme for atom.">
+	<meta property="twitter:creator" content="@sia_mac">
+	<meta property="twitter:url" content="http://siamak.github.io/">
+	<meta property="twitter:image" content="http://siamak.github.io/atom-panda-syntax/favicons/apple-touch-icon.png">
+
+	<!-- Open Graph General -->
+	<meta property="og:url" content="http://siamak.github.io/">
+	<meta property="og:title" content="Panda Syntax Dark Theme | Siamak Mokhtari">
+	<meta property="og:description" content="A Superminimal, dark Syntax Theme for atom.">
+	<meta property="og:site_name" content="http://siamak.github.io/atom-panda-syntax/">
+	<meta property="og:image" content="http://siamak.github.io/favicons/apple-touch-icon.png">
+	<meta property="og:type" content="website">
+
+	<!--  Favicon -->
+	<link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon-180x180.png">
+	<link rel="icon" type="image/png" href="./favicons/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="./favicons/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="./favicons/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="./favicons/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="./favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileImage" content="./favicons/mstile-144x144.png">
+	<meta name="theme-color" content="#ff2c6d">
+
 	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
