--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Panda Syntax Dark Theme | Siamak Mokhtari</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<meta name="description" content="A Superminimal, dark Syntax Theme for atom." />
 	<meta name="keywords" content="panda,atom,syntax,dark,theme,siamakmokhtari" />
 	<meta name="author" content="Siamak Mokhtari (http://siamak.us)" />
@@ -25,6 +25,7 @@
 	<meta property="og:site_name" content="http://siamak.github.io/atom-panda-syntax/">
 	<meta property="og:image" content="http://siamak.github.io/favicons/apple-touch-icon.png">
 	<meta property="og:type" content="website">
+	<meta name="google-site-verification" content="ZR1t_Thy-geNJuz_I4c-F8yLFYWaMMcXCjml28InpEU">
 
 	<!--  Favicon -->
 	<link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-touch-icon-57x57.png">
