Fixed English version

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<title>Panda Syntax Dark Theme | Siamak Mokhtari</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="A Superminimal, dark Syntax Theme for atom." />
-	<meta name="keywords" content="panda,atom,syntax,dark,theme,siamakmokhtari" />
+	<meta name="description" content="A Superminimal, dark Syntax Theme." />
+	<meta name="keywords" content="panda,atom,sublimetext,sublime,st,iterm2,pycharm,syntax,dark,theme,siamakmokhtari" />
 	<meta name="author" content="Siamak Mokhtari (http://siamak.us)" />
 	<meta name="robots" content="index, follow" />
 
 	<!-- Twitter Card -->
 	<meta property="twitter:card" content="summary">
 	<meta property="twitter:title" content="Panda Syntax Dark Theme | Siamak Mokhtari">
-	<meta property="twitter:description" content="Panda Syntax Dark Theme. a superminimal, dark Syntax Theme for atom.">
+	<meta property="twitter:description" content="Panda Syntax Dark Theme. a superminimal, dark Syntax Theme.">
 	<meta property="twitter:creator" content="@sia_mac">
 	<meta property="twitter:url" content="http://siamak.github.io/">
 	<meta property="twitter:image" content="http://siamak.github.io/atom-panda-syntax/favicons/apple-touch-icon.png">
@@ -21,7 +21,7 @@
 	<!-- Open Graph General -->
 	<meta property="og:url" content="http://siamak.github.io/">
 	<meta property="og:title" content="Panda Syntax Dark Theme | Siamak Mokhtari">
-	<meta property="og:description" content="A Superminimal, dark Syntax Theme for atom.">
+	<meta property="og:description" content="A Superminimal, dark Syntax Theme.">
 	<meta property="og:site_name" content="http://siamak.github.io/atom-panda-syntax/">
 	<meta property="og:image" content="http://siamak.github.io/favicons/apple-touch-icon.png">
 	<meta property="og:type" content="website">
