New Things are Ready

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<meta name="msapplication-TileImage" content="./favicons/mstile-144x144.png">
 	<meta name="theme-color" content="#ff2c6d">
 
-	<link href='https://fonts.googleapis.com/css?family=Fira+Mono' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<section id="panda"></section>
